fixed issue with boxes on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*TODO: EGH -- Layout in not working properly in firefox*/
 body {
   background-color: #F2E9E4;
 
@@ -35,7 +34,7 @@ li {
 
 ul {
   background-color: #C9ADA7;
-  border: solid 4px #C9ADA7;
+  border: solid 10px #C9ADA7;
   height: 220px;
   width: 220px;
 }
@@ -52,8 +51,8 @@ ul {
 
 li {
   background-color: #9A8C98;
-  height: 52px;
-  width: 52px;
+  height: 47px;
+  width: 47px;
 }
 
 .outside {
@@ -97,7 +96,7 @@ li {
 .top-box {
   background-color: #C9ADA7;
   border: solid 4px #C9ADA7;
-  width: 220px;
+  width: 232px;
   height: 90px;
   margin-top: 50px;
   margin-bottom: 20px;
@@ -116,7 +115,7 @@ li {
 
 .score-box {
   width: 60px;
-  height: 45px;
+  height: 50px;
   text-align: center;
 }
 
